@@ -2,7 +2,7 @@
   "Id": "BroMaker",
   "DisplayName": "BroMaker",
   "Author": "Gorzontrok",
-  "Version": "2.5.0",
+  "Version": "2.6.0",
   "Requirements": [ "RocketLib" ],
   "LoadAfter": [ "RocketLib" ],
   "AssemblyName": "BroMakerLib.UnityMod.dll",
